# text2sql-trust-layer

./: .env.example  .gitignore  README.md  app.py  conftest.py  pyproject.toml
agent/: graph.py  nodes.py  schema_retrieval.py
data/: load_olist.py
demo/: app.py  demo_cache.json  requirements.txt
docs/: baseline_failures.md  detectors.md  traps.md
eval/: build_demo_cache.py  questions.py  run_eval.py
tests/: test_structural.py
trust/: sanity.py  semantic.py  structural.py  verdict.py
trustsql/: __init__.py
