[project]
name = "trust-sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "deepeval>=4.0.5",
    "duckdb>=1.5.3",
    "fastapi>=0.136.3",
    "langchain>=1.3.4",
    "langchain-anthropic>=1.4.4",
    "langchain-google-genai>=4.2.4",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.4",
    "langsmith>=0.8.9",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3",
    "sentence-transformers>=5.5.1",
    "sqlglot>=30.9.0",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]
